# NetworthHTTP

./: .gitignore  Cargo.toml  LICENSE  README.md  sample.env
docs/design/: endpoints.drawio
docs/licenses/: CLA_ENTITY  CLA_INDIVIDUAL
src/: main.rs
src/config/: mod.rs  types.rs
src/controllers/: mod.rs
src/controllers/fiscal_accounts/: create.rs  create_account.rs  delete_account.rs  get_account.rs  get_accounts.rs  mod.rs  patch_account.rs  types.rs
src/controllers/imports/: approve_import.rs  create_import.rs  delete_import.rs  get_import.rs  get_imports.rs  mod.rs  patch_import.rs
src/controllers/statements/: import.rs  mod.rs
src/controllers/transactions/: create_transaction.rs  delete_transaction.rs  get_transaction.rs  get_transactions.rs  mod.rs  patch_transaction.rs
src/models/migrations/: Cargo.toml  lib.rs  main.rs
tests/: mockoon.json
tests/bruno/: Upload Bank Statement File (XLS).bru  bruno.json
tests/bruno/Fiscal Accounts/: Create Fiscal Account (Invalid Type).bru  Create Fiscal Account.bru  Delete Fiscal Account (Non-existing Item).bru  Delete Fiscal Account.bru  Get Fiscal Account By ID (Invalid ID).bru  Get Fiscal Account By ID.bru  Get Fiscal Accounts.bru  Patch Fiscal Account (Account Number).bru  Patch Fiscal Account (All).bru  Patch Fiscal Account (Both).bru  Patch Fiscal Account (Invalid ID).bru  Patch Fiscal Account (None).bru  Patch Fiscal Account (Type).bru
tests/bruno/Imports/: Approve Imports (Part #1: Approval).bru  Approve Imports (Part #1: Create an account).bru  Approve Imports (Part #1: Invalid Approval).bru  Approve Imports (Part #2: Approval - Invalid).bru  Approve Imports (Part #2: Approval).bru  Approve Imports (Part #2: Check Account).bru  Approve Imports (Part #2: Invalid Approval).bru  Approve Imports (Part #3: Check Account).bru  Approve Imports (Part #3: Check Transactions).bru  Approve Imports (Part #4: Check Imported Gone).bru  Approve Imports (Part #4: Check Transactions).bru  Approve Imports (Part #5: Check Imported Gone).bru  Cleanup: Delete Account #1.bru  (+29 more)
(+16 files in other folders)
